--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
                     <div class="col-md-4 col-sm-6 col-xs-12 ">
                         <img src="img/logo.svg" alt="">
                     </div>
-                    <input type="search" id="form1" class="form-control col-12"
-                        placeholder="prova a cercare, lezioni di laravel" aria-label="Search" />
+                    <div class="row">
+                        <input type="search" id="form1" class="form-control col-12"
+                            placeholder="prova a cercare, lezioni di laravel" aria-label="Search" />
+                    </div>
                 </div>
             </div>
         </section>
