--- a/index.html
+++ b/index.html
@@ -12,23 +12,35 @@
 </head>
 
 <body>
-    <header>
+    <header class="fixed-top">
         <section class="navbar">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-4 col-sm-6 col-xs-12 ">
-                        <img src="img/logo.svg" alt="">
-                    </div>
-                    <div class="row">
-                        <input type="search" id="form1" class="form-control col-12"
-                            placeholder="prova a cercare, lezioni di laravel" aria-label="Search" />
-                    </div>
+                <div class="row ">
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <img class="col" src="img/logo.svg" alt="">
+                    </div>                 
+                        <input type="search" id="form1" class="form-control col offset-1 "
+                        placeholder="prova a cercare, lezioni di laravel" aria-label="Search" />
+                        <i class="fa-solid fa-list col"></i>
+                        <i class="fa-solid fa-circle-question col"></i>
+                        <i class="fa-solid fa-ellipsis-vertical col"></i>
+                        <i class="fa-solid fa-bell col" style="color: #d66000;"></i>
                 </div>
             </div>
         </section>
     </header>
     <main>
-
+        <section class="nav">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 col-sm-6 col-xs-12 ">
+                        <div class="col">
+                            <div>ahcuih</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
