--- a/index.html
+++ b/index.html
@@ -18,25 +18,59 @@
                 <div class="row ">
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <img class="col" src="img/logo.svg" alt="">
-                    </div>                 
-                        <input type="search" id="form1" class="form-control col offset-1 "
+                    </div>
+                    <input type="search" id="form1" class="form-control col offset-1 "
                         placeholder="prova a cercare, lezioni di laravel" aria-label="Search" />
-                        <i class="fa-solid fa-list col"></i>
-                        <i class="fa-solid fa-circle-question col"></i>
-                        <i class="fa-solid fa-ellipsis-vertical col"></i>
-                        <i class="fa-solid fa-bell col" style="color: #d66000;"></i>
+                    <i class="fa-solid fa-list col"></i>
+                    <i class="fa-solid fa-circle-question col"></i>
+                    <i class="fa-solid fa-ellipsis-vertical col"></i>
+                    <i class="fa-solid fa-bell col" style="color: #d66000;"></i>
                 </div>
             </div>
         </section>
     </header>
     <main>
-        <section class="nav">
+        <section class="nav ">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-12 ">
-                        <div class="col">
-                            <div>ahcuih</div>
+                        <div class="col d-flex py-2">
+                            <i class="fa-solid fa-house " style="color: #ffffff;"></i>
+                            <div class="text-light">home</div>
                         </div>
+                        <div class="col d-flex py-2">
+                            <i class="fa-solid fa-chart-simple" style="color: #ffffff;"></i>
+                            <div class="text-light">stats</div>
+                        </div>
+                        <div class="col d-flex py-2">
+                            <i class="fa-solid fa-signal" style="color: #ffffff;"></i>
+                            <div class="text-light">signal</div>
+                        </div>
+                        <div class="col d-flex py-5">
+                            <i class="fa-solid fa-gear" style="color: #ffffff;"></i>
+                            <div class="text-light">admin</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contenuto">
+            <div class="container">
+                <div class="row bg-primary">
+                    <div class="col-6">
+                        <div class="col fs-2">Boolean
+                            <span class="badge rounded-pill bg-dark fs-6">piano blaze</span>
+                        </div>
+                        <div class="row py-3 mb-4">
+                            <span class="badge rounded-pill bg-dark fs-6 col-2">3 app</span>
+                            <i class="fa-solid fa-angles-right col-1 " style="color: #ffffff;"></i>
+                            <span class="badge rounded-pill bg-dark fs-6 col-2">3 app</span>
+                            <span class="badge rounded-pill bg-dark fs-6 col-2">3 app</span>
+                            <span class="badge rounded-pill bg-dark fs-6 col-2">3 app</span>
+                        </div>
+                    </div>
+                    <div class="col-6">
+
                     </div>
                 </div>
             </div>
