--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <i class="fa-solid fa-signal" style="color: #ffffff;"></i>
                             <div class="text-light">signal</div>
                         </div>
-                        <div class="col d-flex py-5">
+                        <div class="col d-flex mt-5">
                             <i class="fa-solid fa-gear" style="color: #ffffff;"></i>
                             <div class="text-light">admin</div>
                         </div>
@@ -69,16 +69,168 @@
                             <span class="badge rounded-pill bg-dark fs-6 col-2">3 app</span>
                         </div>
                     </div>
-                    <div class="col-6">
-
+                    <div class=" row col-6 text-light d-flex align-items-center">
+                        <div class="col-6">studenti online negli ultimi 30 giorni
+                            <div class="fs-1">125</div>
+                        </div>
+                        <div class="col-6">nuovo studente
+                            <i class="fa-regular fa-square-plus fs-1"></i>
+                        </div>
                     </div>
+                </div>
+            </div>
+            <div class="container ">
+                <div class="flow">
+                    <div class=" col-8 border m-2 p-4 rounded-3">
+                        <div class="fs-2">prossime classi</div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-4">nome</div>
+                            <div class="col-2">data inizio</div>
+                            <div class="col-2">roi</div>
+                            <div class="col-2">stato</div>
+                            <div class="col-2">azioni</div>
+                        </div>
+                        <hr>
+                        <div class="row d-flex align-items-center">
+                            <img class="image col-1" src="img/class-avatar.jpg" alt="">
+                            <div class="col-3">classe 75</div>
+                            <div class="col-2">15/feb/2021</div>
+                            <div class="col-2">20%</div>
+                            <span class="badge rounded-pill bg-success col-1">done</span>
+                            <div class="row col offset-1">
+                                <i class="fa-solid fa-square-pen col-2 fs-3"></i>
+                                <i class="fa-solid fa-trash col-2 fs-3"></i>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row d-flex align-items-center">
+                            <img class="image col-1" src="img/class-avatar.jpg" alt="">
+                            <div class="col-3">classe 75</div>
+                            <div class="col-2">15/feb/2021</div>
+                            <div class="col-2">20%</div>
+                            <span class="badge rounded-pill bg-success col-1">done</span>
+                            <div class="row col offset-1">
+                                <i class="fa-solid fa-square-pen col-2 fs-3"></i>
+                                <i class="fa-solid fa-trash col-2 fs-3"></i>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row d-flex align-items-center">
+                            <img class="image col-1" src="img/class-avatar.jpg" alt="">
+                            <div class="col-3">classe 75</div>
+                            <div class="col-2">15/feb/2021</div>
+                            <div class="col-2">20%</div>
+                            <span class="badge rounded-pill bg-success col-1">done</span>
+                            <div class="row col offset-1">
+                                <i class="fa-solid fa-square-pen col-2 fs-3"></i>
+                                <i class="fa-solid fa-trash col-2 fs-3"></i>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row d-flex align-items-center">
+                            <img class="image col-1" src="img/class-avatar.jpg" alt="">
+                            <div class="col-3">classe 75</div>
+                            <div class="col-2">15/feb/2021</div>
+                            <div class="col-2">20%</div>
+                            <span class="badge rounded-pill bg-success col-1">done</span>
+                            <div class="row col offset-1">
+                                <i class="fa-solid fa-square-pen col-2 fs-3"></i>
+                                <i class="fa-solid fa-trash col-2 fs-3"></i>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row d-flex align-items-center">
+                            <img class="image col-1" src="img/class-avatar.jpg" alt="">
+                            <div class="col-3">classe 75</div>
+                            <div class="col-2">15/feb/2021</div>
+                            <div class="col-2">20%</div>
+                            <span class="badge rounded-pill bg-success col-1">done</span>
+                            <div class="row col offset-1">
+                                <i class="fa-solid fa-square-pen col-2 fs-3"></i>
+                                <i class="fa-solid fa-trash col-2 fs-3"></i>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row d-flex align-items-center">
+                            <img class="image col-1" src="img/class-avatar.jpg" alt="">
+                            <div class="col-3">classe 75</div>
+                            <div class="col-2">15/feb/2021</div>
+                            <div class="col-2">20%</div>
+                            <span class="badge rounded-pill bg-success col-1">done</span>
+                            <div class="row col offset-1">
+                                <i class="fa-solid fa-square-pen col-2 fs-3"></i>
+                                <i class="fa-solid fa-trash col-2 fs-3"></i>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row d-flex align-items-center">
+                            <img class="image col-1" src="img/class-avatar.jpg" alt="">
+                            <div class="col-3">classe 75</div>
+                            <div class="col-2">15/feb/2021</div>
+                            <div class="col-2">20%</div>
+                            <span class="badge rounded-pill bg-success col-1">done</span>
+                            <div class="row col offset-1">
+                                <i class="fa-solid fa-square-pen col-2 fs-3"></i>
+                                <i class="fa-solid fa-trash col-2 fs-3"></i>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row d-flex align-items-center">
+                            <img class="image col-1" src="img/class-avatar.jpg" alt="">
+                            <div class="col-3">classe 75</div>
+                            <div class="col-2">15/feb/2021</div>
+                            <div class="col-2">20%</div>
+                            <span class="badge rounded-pill bg-success col-1">done</span>
+                            <div class="row col offset-1">
+                                <i class="fa-solid fa-square-pen col-2 fs-3"></i>
+                                <i class="fa-solid fa-trash col-2 fs-3"></i>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+                </div>
+                <div class="col-8 border m-2 p-4 rounded-3 ">
+                    <div class="fs-2">F.A.Q.</div><hr>
+                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                              Accordion Item #1
+                            </button>
+                          </h2>
+                          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="flush-headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                              Accordion Item #2
+                            </button>
+                          </h2>
+                          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="flush-headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                              Accordion Item #3
+                            </button>
+                          </h2>
+                          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-4">
+                   yjtrj
                 </div>
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
 </body>
 
 </html>
