--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="container ">
                 <div class="row">
                     <div class="col-6 d-flex ">
-                        <div class="col fs-2">Boolean</div>   
+                        <div class="col fs-2">Boolean</div>
                     </div>
                     <div class="col-6 d-flex align-items-center">
                         <div class="col-8">studenti online negli ultimi 30 anni</div>
@@ -84,10 +84,10 @@
                 <div class="row">
                     <div class="col-6 d-flex ">
                         <span class="badge rounded-pill bg-dark ">3 app</span>
-                            <i class="fa-solid fa-angles-right" style="color: #ffffff;"></i>
-                            <span class="badge rounded-pill bg-dark">3 app</span>
-                            <span class="badge rounded-pill bg-dark">3 app</span>
-                            <span class="badge rounded-pill bg-dark">3 app</span>
+                        <i class="fa-solid fa-angles-right" style="color: #ffffff;"></i>
+                        <span class="badge rounded-pill bg-dark">3 app</span>
+                        <span class="badge rounded-pill bg-dark">3 app</span>
+                        <span class="badge rounded-pill bg-dark">3 app</span>
                     </div>
                     <div class="col-6">
                         <div class="fs-1">125</div>
@@ -95,19 +95,27 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-8 border  p-4 rounded-3">
-                        <div class="fs-2">prossime classi</div>
+        <section id="my_main_header" class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <h2>Boolean</h2>
+                </div>
+                <div class="col-12 col-md-4">Studenti</div>
+                <div class="col-12 col-md-2">Nuovo</div>
+            </div>
+        </section>
+        <section id="my_main_content" class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-md-8">
+                    <div class="my_finta_card">
+                        
                         <table class="table table-striped table-hover">
                             <thead>
                                 <tr>
-                                  <th style="width: 0;" >Nome</th>
-                                  <th style="width: auto;" >data inizio</th>
-                                  <th style="width: 0;" class="d-none d-md-table-cell" >roi</th>
-                                  <th style="width: 0;" class="d-none d-md-table-cell" >stato</th>
-                                  <th style="width: 0;" class="d-none d-md-table-cell" >azioni</th>
+                                  <th style="width: 0;" >N</th>
+                                  <th style="width: auto;" >Nome</th>
+                                  <th style="width: 0;" class="d-none d-md-table-cell" >Voto</th>
+                                  <th style="width: 0;" class="d-none d-md-table-cell" >Bottoni</th>
                                 </tr>
                               </thead>
                               <tbody>
@@ -137,12 +145,21 @@
                                 </tr>
                               </tbody>
                             </table>
+
+                    </div>
+                    <div class="my_finta_card">FAQ</div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="my_finta_card">TODO</div>
+                    <div class="my_finta_card">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima voluptatibus quaerat, quas
+                        labore possimus quasi quisquam fuga! Similique alias, inventore deserunt laudantium,
+                        repellendus sunt earum quibusdam dolorem labore nihil perspiciatis!
                     </div>
                 </div>
             </div>
         </section>
     </main>
-
 </body>
 
 </html>
