--- a/index.html
+++ b/index.html
@@ -36,8 +36,22 @@
                     <div class="col-auto d-flex align-items-center">
                         <i class="fa-solid fa-ellipsis-vertical"></i>
                     </div>
-                    <div class="col-auto d-flex align-items-center">
-                        <i class="fa-solid fa-bell " style="color: #d66000;"></i>
+                    <div class="col-auto d-flex align-items-center ">
+                        <button class="btn btn-primary " type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Toggle right
+                            offcanvas</button>
+
+                        <div class="offcanvas offcanvas-end " tabindex="-1" id="offcanvasRight"
+                            aria-labelledby="offcanvasRightLabel">
+                            <div class="offcanvas-header">
+                                <h5 id="offcanvasRightLabel">Offcanvas right</h5>
+                                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body ">
+                                
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -95,66 +109,229 @@
                 </div>
             </div>
         </section>
-        <section id="my_main_header" class="container-fluid">
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <h2>Boolean</h2>
-                </div>
-                <div class="col-12 col-md-4">Studenti</div>
-                <div class="col-12 col-md-2">Nuovo</div>
-            </div>
-        </section>
+
         <section id="my_main_content" class="container-fluid">
             <div class="row">
-                <div class="col-12 col-md-8">
+                <div class="col-12 col-md-8 border p-4 rounded-3">
                     <div class="my_finta_card">
-                        
+
                         <table class="table table-striped table-hover">
                             <thead>
                                 <tr>
-                                  <th style="width: 0;" >N</th>
-                                  <th style="width: auto;" >Nome</th>
-                                  <th style="width: 0;" class="d-none d-md-table-cell" >Voto</th>
-                                  <th style="width: 0;" class="d-none d-md-table-cell" >Bottoni</th>
+                                    <th style="width: 0;">Nome</th>
+                                    <th style="width: 0;" class="d-none d-md-table-cell">data inizio</th>
+                                    <th style="width: 0;" class="d-none d-md-table-cell">roi</th>
+                                    <th style="width: 0;" class="d-none d-md-table-cell">stato</th>
+                                    <th style="width: 0;" class="d-none d-md-table-cell">azioni</th>
                                 </tr>
-                              </thead>
-                              <tbody>
+                            </thead>
+                            <tbody>
                                 <tr>
-                                  <td>1</td>
-                                  <td>Mario Rossi</td>
-                                  <td class="d-none d-md-table-cell">6</td>
-                                  <td class="d-none d-md-table-cell">contenuto</td>
-                                </tr>
-                                <tr>
-                                  <td>2</td>
-                                  <td>Gabriele Arcangelo</td>
-                                  <td class="d-none d-md-table-cell">4</td>
-                                  <td class="d-none d-md-table-cell">contenuto</td>
-                                </tr>
-                                <tr>
-                                  <td>3</td>
-                                  <td>Bruno Giordano</td>
-                                  <td class="d-none d-md-table-cell">10</td>
-                                  <td class="d-none d-md-table-cell">contenuto</td>
+                                    <td><img class="img-avatar col-3" src="img/class-avatar.jpg" alt="">classe 75
+                                    </td>
+                                    <td class="d-none d-md-table-cell">15/feb/2021</td>
+                                    <td class="d-none d-md-table-cell">20%</td>
+                                    <td class="d-none d-md-table-cell"><span
+                                            class="badge rounded-pill bg-success ">done</span></td>
+                                    <td class="d-none d-md-table-cell"><i class="fa-solid fa-square-pen  fs-3"></i>
+                                        <i class="fa-solid fa-trash  fs-3"></i>
+                                    </td>
                                 </tr>
                                 <tr>
-                                  <td>3</td>
-                                  <td>Alberto Lupo</td>
-                                  <td class="d-none d-md-table-cell">9</td>
-                                  <td class="d-none d-md-table-cell">contenuto</td>
+                                    <td><img class="img-avatar col-3" src="img/class-avatar.jpg" alt="">classe 75
+                                    </td>
+                                    <td class="d-none d-md-table-cell">16/feb/2021</td>
+                                    <td class="d-none d-md-table-cell">20%</td>
+                                    <td class="d-none d-md-table-cell"><span
+                                            class="badge rounded-pill bg-success ">done</span></td>
+                                    <td class="d-none d-md-table-cell"><i class="fa-solid fa-square-pen  fs-3"></i>
+                                        <i class="fa-solid fa-trash  fs-3"></i>
+                                    </td>
                                 </tr>
-                              </tbody>
-                            </table>
+                                <tr>
+                                    <td><img class="img-avatar col-3" src="img/class-avatar.jpg" alt="">classe 75
+                                    </td>
+                                    <td class="d-none d-md-table-cell">17/feb/2021</td>
+                                    <td class="d-none d-md-table-cell">20%</td>
+                                    <td class="d-none d-md-table-cell"><span
+                                            class="badge rounded-pill bg-warning ">process</span></td>
+                                    <td class="d-none d-md-table-cell"><i class="fa-solid fa-square-pen  fs-3"></i>
+                                        <i class="fa-solid fa-trash  fs-3"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><img class="img-avatar col-3" src="img/class-avatar.jpg" alt="">classe 75
+                                    </td>
+                                    <td class="d-none d-md-table-cell">18/feb/2021</td>
+                                    <td class="d-none d-md-table-cell">20%</td>
+                                    <td class="d-none d-md-table-cell"><span
+                                            class="badge rounded-pill bg-success ">done</span></td>
+                                    <td class="d-none d-md-table-cell"><i class="fa-solid fa-square-pen  fs-3"></i>
+                                        <i class="fa-solid fa-trash  fs-3"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><img class="img-avatar col-3" src="img/class-avatar.jpg" alt="">classe 75
+                                    </td>
+                                    <td class="d-none d-md-table-cell">19/feb/2021</td>
+                                    <td class="d-none d-md-table-cell">20%</td>
+                                    <td class="d-none d-md-table-cell"><span
+                                            class="badge rounded-pill bg-danger ">falled</span></td>
+                                    <td class="d-none d-md-table-cell"><i class="fa-solid fa-square-pen  fs-3"></i>
+                                        <i class="fa-solid fa-trash  fs-3"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><img class="img-avatar col-3" src="img/class-avatar.jpg" alt="">classe 75
+                                    </td>
+                                    <td class="d-none d-md-table-cell">20/feb/2021</td>
+                                    <td class="d-none d-md-table-cell">20%</td>
+                                    <td class="d-none d-md-table-cell"><span
+                                            class="badge rounded-pill bg-success ">done</span></td>
+                                    <td class="d-none d-md-table-cell"><i class="fa-solid fa-square-pen  fs-3"></i>
+                                        <i class="fa-solid fa-trash  fs-3"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><img class="img-avatar col-3" src="img/class-avatar.jpg" alt="">classe 75
+                                    </td>
+                                    <td class="d-none d-md-table-cell">21/feb/2021</td>
+                                    <td class="d-none d-md-table-cell">20%</td>
+                                    <td class="d-none d-md-table-cell"><span
+                                            class="badge rounded-pill bg-danger ">falled</span></td>
+                                    <td class="d-none d-md-table-cell"><i class="fa-solid fa-square-pen  fs-3"></i>
+                                        <i class="fa-solid fa-trash  fs-3"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><img class="img-avatar col-3" src="img/class-avatar.jpg" alt="">classe 75
+                                    </td>
+                                    <td class="d-none d-md-table-cell">22/feb/2021</td>
+                                    <td class="d-none d-md-table-cell">20%</td>
+                                    <td class="d-none d-md-table-cell"><span
+                                            class="badge rounded-pill bg-success ">done</span></td>
+                                    <td class="d-none d-md-table-cell"><i class="fa-solid fa-square-pen  fs-3"></i>
+                                        <i class="fa-solid fa-trash  fs-3"></i>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
 
                     </div>
-                    <div class="my_finta_card">FAQ</div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 col-md-8 border  p-4 rounded-3">
+                                <div class="fs-2">F.A.Q.</div>
+                                <hr>
+                                <div class="accordion" id="accordionExample1">
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header " id="heading1">
+                                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                                data-bs-target="#collapse1" aria-expanded="true"
+                                                aria-controls="collapse1">
+                                                Elemento Accordion #1
+                                            </button>
+                                        </h2>
+                                        <div id="collapse1" class="accordion-collapse collapse show"
+                                            data-bs-parent="#accordionExample1" role="region"
+                                            aria-labelledby="heading1">
+                                            <div class="accordion-body">
+                                                Vestibulum hendrerit ultrices nibh, sed pharetra lacus ultrices eget.
+                                                Morbi
+                                                et
+                                                ipsum et sapien dapibus facilisis. Integer eget semper nibh. Proin enim
+                                                nulla,
+                                                egestas ac rutrum eget, ullamcorper nec turpis.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header " id="heading2">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#collapse2"
+                                                aria-expanded="false" aria-controls="collapse2">
+                                                Elemento Accordion #2
+                                            </button>
+                                        </h2>
+                                        <div id="collapse2" class="accordion-collapse collapse"
+                                            data-bs-parent="#accordionExample1" role="region"
+                                            aria-labelledby="heading2">
+                                            <div class="accordion-body">
+                                                Vestibulum hendrerit ultrices nibh, sed pharetra lacus ultrices eget.
+                                                Morbi
+                                                et
+                                                ipsum et sapien dapibus facilisis. Integer eget semper nibh. Proin enim
+                                                nulla,
+                                                egestas ac rutrum eget, ullamcorper nec turpis.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header " id="heading3">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#collapse3"
+                                                aria-expanded="false" aria-controls="collapse3">
+                                                Elemento Accordion #3
+                                            </button>
+                                        </h2>
+                                        <div id="collapse3" class="accordion-collapse collapse"
+                                            data-bs-parent="#accordionExample1" role="region"
+                                            aria-labelledby="heading3">
+                                            <div class="accordion-body">
+                                                Vestibulum hendrerit ultrices nibh, sed pharetra lacus ultrices eget.
+                                                Morbi
+                                                et
+                                                ipsum et sapien dapibus facilisis. Integer eget semper nibh. Proin enim
+                                                nulla,
+                                                egestas ac rutrum eget, ullamcorper nec turpis.
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 col-md-4">
-                    <div class="my_finta_card">TODO</div>
-                    <div class="my_finta_card">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima voluptatibus quaerat, quas
-                        labore possimus quasi quisquam fuga! Similique alias, inventore deserunt laudantium,
-                        repellendus sunt earum quibusdam dolorem labore nihil perspiciatis!
+                <div class="col-12 col-md-4 ">
+                    <div class="border p-4 rounded-3">
+                        <div class="fs-2">TODO</div>
+                        <hr>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                kickoff nuove classi
+                            </label>
+                        </div>
+                        <hr>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                            <label class="form-check-label" for="flexCheckChecked">
+                                kickoff nuove classi
+                            </label>
+                        </div>
+                        <hr>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                            <label class="form-check-label" for="flexCheckChecked">
+                                kickoff nuove classi
+                            </label>
+                        </div>
+                    </div>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="">
+                                <div class="border p-4 rounded-3">
+                                    <img class="img-stats col-1" src="img/stats.jpeg" alt="">
+                                    <h4 class="col-1">utenti attivita</h4>
+                                    <div class="col">gennaio 1200</div>
+                                    <hr>
+                                    <div class="col-6">febbraio 800</div>
+                                    <hr>
+                                    <div class="col">marzo 1500</div>
+                                    <hr>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
